--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -54,14 +54,29 @@ section > p{
 section.imagem{
     background-color: rgb(96, 96, 96);
     color: white;
+    box-shadow: inset 2px 2px 10px black;
 }
 
 section.imagem > p{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.347);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 }
 
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img02{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 footer{
     background-color: black;
